deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-b
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: front-ty
  template:
        metadata:
            labels:
               tier: front-ty
        spec:
            containers:
                 - name: c2
                   image: gcr.io/google-samples/hello-app:2.0

                     #image: grc.io/google-samples/hello-app:2.0
