service2.yml
apiVersion: v1
kind: Service
metadata:
  name: service4
spec:
   type: ClusterIP
   selector:
     tier: front-end
   ports:
      - port: 8080
