service3.yml
apiVersion: v1
kind: Service
metadata:
  name: serviceyu
spec:
  type: ClusterIP
  selector:
    tier: front-ty
  ports:
    - port: 8080
