services.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
    type: ClusterIP
    ports:
      - port: 80  
    selector:
      tier: front
