ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: verna.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80 #30009
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: service4
            port:
              number: 8080 #30009
      - path: /view
        pathType: Prefix
        backend:
          service:
            name: serviceyu
            port:
              number: 8080 #30009
